# prefade-project

./: .gitignore  Cargo.toml  README.md
crates/build-all/: Cargo.toml
crates/build-all/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/lua/: Cargo.toml
crates/lua/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
lua/prefade/: init.lua  main.lua
node/: package-lock.json  package.json  tsconfig.json
node/native/: index.d.ts
node/prefade/: index.ts  main.ts
python/: pyproject.toml
python/prefade/: __init__.py  __init__.pyi
python/use-case1/: example.ipynb  main.py
